cargo-features = ["edition2024"]

[package]
name = "solana-dao-program"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Solana DAO program for proposal creation and voting"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.0"
thiserror = "1.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"

[lib]
crate-type = ["cdylib", "lib"]
