[package]
name = "dao-program"
version = "0.1.0"
edition = "2021"
description = "Solana DAO Program"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.43"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
